# sysinfo-sse

./: Makefile.toml  README.md
sysinfo-sse-backend/: Cargo.toml
sysinfo-sse-backend/src/: main.rs
sysinfo-sse-backend/src/system_info/: component.rs  disk.rs  mod.rs  network.rs
sysinfo-sse-frontend/: index.html  package.json  pnpm-lock.yaml
sysinfo-sse-frontend/src/: App.tsx  sysinfo.d.ts
sysinfo-sse-frontend/src/sections/: components.tsx  cpus.tsx  disks.tsx  info.tsx  load.tsx  memory.tsx  network.tsx
sysinfo-sse-frontend/src/utils/: index.ts
