[package]
name = "sysinfo-sse-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
serde = { version = "1.0.180", features = ["derive"] }
sysinfo = "0.29.10"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = [
  "cors",
], default-features = false }
